# mind_evolve

./: .gitignore  README.md  main.py  pyproject.toml  test_config.yml  test_installation.py  test_problem.txt
examples/: chemistry_example.py  coding_example.py  physics_example.py  simple_example.py
mind_evolve/: __init__.py  cli.py
mind_evolve/core/: __init__.py  evolutionary_engine.py  island_model.py  models.py  population.py  selection.py
mind_evolve/evaluation/: __init__.py  evaluator_base.py  feedback_generator.py  scoring.py
mind_evolve/llm/: __init__.py  conversation_manager.py  llm_interface.py  prompt_manager.py
mind_evolve/operators/: __init__.py  crossover.py  initialization.py  migration.py  mutation.py
mind_evolve/utils/: __init__.py  config.py  logging.py  metrics.py
results/: physics_example_results.json  physics_example_solution.md  simple_example_best_story.txt  simple_example_results.json
